// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render UserPage component correctly 1`] = `
<DocumentFragment>
  <div
    class="content-container"
  >
    <div
      class="user-page"
    >
      <div
        class="user-page__info-section"
      >
        <div
          class="user-page__uname-edit"
        >
          <div
            class="user-page__uname"
          >
            UserAdmin
            <div
              class="user-page__join-date"
              data-testid="join_date"
            >
              <i>
                joined on:
              </i>
               7 Oct 2021
            </div>
          </div>
        </div>
        <div
          class="user-page__bio"
          data-testid="user_bio"
        >
          <i>
            bio:
          </i>
           MyBio
        </div>
      </div>
      ModalEditProfile
      <div
        class="blogs-container"
      >
        BlogItemBlogItem
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Should render UserPage component correctly if uname === userPage(username) 1`] = `
<DocumentFragment>
  <div
    class="content-container"
  >
    <div
      class="user-page"
    >
      <div
        class="user-page__info-section"
      >
        <div
          class="user-page__uname-edit"
        >
          <div
            class="user-page__uname"
          >
            UserAdmin
            <div
              class="user-page__join-date"
              data-testid="join_date"
            >
              <i>
                joined on:
              </i>
               7 Oct 2021
            </div>
          </div>
          <div
            class="user-page__private"
          >
            <div
              class="user-page__saved-link"
            >
              <a>
                <abbr
                  title="Saved Blogs"
                >
                  Saved
                </abbr>
              </a>
            </div>
            <div
              class="user-page__edit-button-container"
            >
              <a
                data-testid="edit_profile_button"
              >
                <abbr
                  title="Edit Profile"
                >
                  <svg
                    class="edit-profile-icon"
                  >
                    edit-regular.svg
                  </svg>
                </abbr>
              </a>
            </div>
          </div>
        </div>
        <div
          class="user-page__bio"
          data-testid="user_bio"
        >
          <i>
            bio:
          </i>
           MyBio
        </div>
      </div>
      ModalEditProfile
      <div
        class="blogs-container"
      >
        BlogItemBlogItem
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Should render UserPage component correctly without bio 1`] = `
<DocumentFragment>
  <div
    class="content-container"
  >
    <div
      class="user-page"
    >
      <div
        class="user-page__info-section"
      >
        <div
          class="user-page__uname-edit"
        >
          <div
            class="user-page__uname"
          >
            UserAdmin
            <div
              class="user-page__join-date"
              data-testid="join_date"
            >
              <i>
                joined on:
              </i>
               7 Oct 2021
            </div>
          </div>
        </div>
      </div>
      ModalEditProfile
      <div
        class="blogs-container"
      >
        BlogItemBlogItem
      </div>
    </div>
  </div>
</DocumentFragment>
`;
